--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.15"
+    "mongoose": "^5.12.15",
+    "validator": "^13.6.0"
   }
 }
