--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "start:debug": "node --inspect app.js",
     "dev": "nodemon app.js",
     "lint": "npx eslint ."
   },
@@ -28,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.15",
     "validator": "^13.6.0"
   }
