--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "celebrate": "^15.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.15",
+    "path": "^0.12.7",
     "validator": "^13.6.0"
   }
 }
