--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "express-winston": "^4.1.0",
     "jest": "^27.0.6",
     "nodemon": "^2.0.7"
   },
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.15",
     "path": "^0.12.7",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "winston": "^3.3.3"
   }
 }
